--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ input[type="text"] {
 }
 
 button {
-  background-color: #6f1921;
+  background-color: #710c04;
   color: white;
   padding: 10px 20px;
   border: none;
